org.mmisw.iserver 
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13
$Id$

2009-10-02   1.5.0.alpha30
	- TempOntologyInfo: now with a shortName attribute taken from the xmlbase
	- CreateOntologyInfo: now with a baseOntologyInfo attribute which is info about the 
	  ontology used as starting point, if any.
	  
2009-10-01   1.5.0.alpha30
	- Moved displayLabel from RegisteredOntologyInfo to its superclass BaseOntologyInfo
	  (so, a TempOntologyInfo can also have a displayLabel).
	  
	  
2009-09-30   1.5.0.alpha30
	- Removed JenaUtil2 in this module (which was a replication of a class in the
	  "ont: module); now using org.mmisw.ont.misc.jar (generated by "ont").
	
	- TempOntologyInfo: now with an xmlBase attribute. This is a preliminary change for a better
	  approach to examine an external ontology, in particular, to get the base URI associated with
	  the external ontology. 
	  TODO consider implementing a getBaseUri operation (in JenaUtil2) to check for the xml:base. 
	  If there is no xml:base, get the URI of the Ontology resource in the (base model in the file).
	  If there is no such resource, what to do? 
	  See http://jena.sourceforge.net/ontology/#metadata 
	
	
2009-09-29   1.5.0.alpha29   (alpha23-28 skipped to sync with ontmd)
	Fixed issue #192 "wrong versioned/unversioned response"
		Util2.replaceNameSpace now uses Util2._inNamespace(Resource resource, String namespace)
		to determine when a resource is "located" in a given namespace.
		
	Fixed Issue #193 "list of versions include unversioned"
		getOntologyInfoWithVersionParams: in case b), the first entry in the list was altered; now
		a copy is made, which is assigned the unversioned URI.
	
	
2009-09-18   1.5.0.alpha22
	- New support to resolve term URIs. This is generalized for both ontology URIs and
	  term URIs via a new class ResolveUriResult and service Server.resolveUri(uri).
	  The operation first tries getOntologyInfo(uri) and then _getEntityInfo(..).